# claude-session-manager

./: .gitignore  LICENSE  README.md  claude_session_manager.spec  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/: cli.md  index.md  installation.md  quickstart.md  troubleshooting.md  tui.md  web-ui.md
src/claude_session_manager/: __init__.py  __main__.py  cli.py  session_manager.py  tui.py  web_ui.py
